fep2, draft two